--- a/BLL/packages.config
+++ b/BLL/packages.config
@@ -13,7 +13,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MsSqlDBUtility" version="1.0.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
-  <package id="NLog" version="3.2.1" targetFramework="net45" />
+  <package id="NLog" version="4.0.1" targetFramework="net451" />
+  <package id="NLog.Config" version="4.0.1" targetFramework="net451" />
+  <package id="NLog.Schema" version="4.0.1" targetFramework="net451" />
   <package id="StackExchange.Redis" version="1.0.450" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
