--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdaptedCSSFriendly" version="1.0.1" targetFramework="net451" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="BundleTransformer.Core" version="1.9.52" targetFramework="net45" />
   <package id="BundleTransformer.SassAndScss" version="1.9.52" targetFramework="net45" />
   <package id="BundleTransformer.Yui" version="1.9.52" targetFramework="net45" />
   <package id="dropzone" version="4.0.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
@@ -23,10 +28,11 @@
   <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MsSqlDBUtility" version="1.0.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="NLog" version="3.2.0.0" targetFramework="net451" />
-  <package id="NLog.Config" version="3.2.0.0" targetFramework="net451" />
-  <package id="NLog.Schema" version="3.2.0.0" targetFramework="net451" />
+  <package id="NLog" version="4.0.1" targetFramework="net451" />
+  <package id="NLog.Config" version="4.0.1" targetFramework="net451" />
+  <package id="NLog.Schema" version="4.0.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net45" />
