--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -10,6 +10,15 @@
         <description>A simple enterprise content management system</description>
         <copyright>Copyright © Renderspace d.o.o. 2015</copyright>
         <dependencies>
+          <dependency id="AdaptedCSSFriendly" version="1.0.1" />
+          <dependency id="Kentor.OwinCookieSaver" version="1.0.2" />
+          <dependency id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" />
+          <dependency id="Microsoft.AspNet.Identity.Owin" version="2.2.1" />
+          <dependency id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" />
+          <dependency id="Microsoft.Owin.Security.Facebook" version="3.0.1" />
+          <dependency id="Microsoft.Owin.Security.Google" version="3.0.1" />
+          <dependency id="MsSqlDBUtility" version="1.0.3" />
+          <dependency id="NLog.Config" version="4.0.1" />
         </dependencies>
     </metadata>
     <files>
@@ -51,7 +60,8 @@
       <file src="Global.asax" target="content\Global.asax" />
       <file src="OneMain.Master" target="content\OneMain.Master" />
       <file src="Web.sitemap" target="content\Web.sitemap" />
-      <file src="bin\*.dll" target="lib\net451" />
+      <file src="bin\One.Net.BLL.dll" target="lib\net45" />
+      <file src="bin\OneMainWeb.dll" target="lib\net45" />
       <file src="gitignore.template" target="content" />
       <file src="Web.config" target="content" />
       <file src="LocalRewrite.config" target="content" />      
